[package]
name = "moving_asterisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chwalk"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
